pkg/lang/syntax/testdata/ub/validate/invalid/factory/state-moves-invalid-address-root.ub
factory: {
  state-moves: [
    { from: 'input.old', to: 'resource.new' }
  ]
}
